// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] blocks/<AdminAnswer /> (Checked draft) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <button
      class="sc-bdVaJa sc-EHOje Checkbox-sc-1jox9lb-0 efNukH Button-sc-1bpx84u-0 wNuyp"
      color="white"
      font-size="inherit"
      font-weight="bold"
      role="checkbox"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-check-square fa-w-14 fa-1x Icon-sc-4jlog9-0 hXLKsx"
        color="var(--color-lapis-lazuli)"
        data-icon="check-square"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 480H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48v352c0 26.51-21.49 48-48 48zm-204.686-98.059l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.248-16.379-6.249-22.628 0L184 302.745l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.25 16.379 6.25 22.628.001z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de rédaction
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Draft falling back to LC) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de rédaction
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 AdminAnswer__ContentExtractRed-sc-1257a91-7 hHWLgm"
        >
          Renvoyé au Code du travail.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Draft falling back to NA) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de rédaction
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 AdminAnswer__ContentExtractRed-sc-1257a91-7 hHWLgm"
        >
          Renvoyé à la convention collective nationale.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Draft) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de rédaction
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Pending Review) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en attente de validation
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (To Do) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          à rédiger
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Unchecked draft) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <button
      class="sc-bdVaJa sc-EHOje Checkbox-sc-1jox9lb-0 efNukH Button-sc-1bpx84u-0 wNuyp"
      color="white"
      font-size="inherit"
      font-weight="bold"
      role="checkbox"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-square fa-w-14 fa-1x Icon-sc-4jlog9-0 hXLKsx"
        color="var(--color-lapis-lazuli)"
        data-icon="square"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de rédaction
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Under Review) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          en cours de validation
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[Contrib] blocks/<AdminAnswer /> (Validated) should match snapshot 1`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH AdminAnswer__Container-sc-1257a91-0 exoODn"
  >
    <div
      class="sc-bdVaJa sc-bwzfXH eTLtBf"
      width="1"
    >
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Top-sc-1257a91-1 dgddaa"
      >
        <span
          class="AdminAnswer__TopState-sc-1257a91-2 RjFBy"
        >
          validée
        </span>
        <span
          class="AdminAnswer__TopAuthor-sc-1257a91-3 ecauMH"
        >
          Proposé par : A User Name, il y a 2 heures
        </span>
      </div>
      <div
        class="sc-bdVaJa sc-bwzfXH AdminAnswer__Content-sc-1257a91-4 httAcf"
      >
        <div
          class="sc-bdVaJa sc-bwzfXH dntGME"
        >
          <div
            class="Idcc__Container-owzimc-0 fWXTkt"
            currentitem="false"
            data-tip="An Agreement Name"
          >
            CCN: 
            1234
            <div
              class="__react_component_tooltip place-top type-dark "
              data-id="tooltip"
            />
          </div>
          <div
            class="AdminAnswer__ContentQuestion-sc-1257a91-5 bTdchR"
          >
            12) A Question Value
          </div>
        </div>
        <div
          class="AdminAnswer__ContentExtract-sc-1257a91-6 dyxMzJ"
        >
          Il m'est arrivé de sentir que tout allait bien pour moi, que&lt;br&gt;
            tout le monde était…
        </div>
      </div>
    </div>
  </div>
</div>
`;
